tests/ui/fail-externinclude.stderr
error: can not include extern block.
 --> $DIR/fail-externinclude.rs:1:27
  |
1 | #[lazylink::lazylink("c", include="aaa")]
  |                           ^^^^^^^
